--- a/grid.css
+++ b/grid.css
@@ -120,9 +120,17 @@ ul#nav_menu li a:hover {transition:0.4s;border-bottom: 3px solid #2d9ce1;color:#
  * --------------- */
 .grid_10{margin:0;padding:0}
 #content {width:100%;margin:0;padding:0;}
+.post h1 { font-size: 20px;margin:0 3% 12px;line-height:24px; border-bottom:1px solid #ddd;padding-bottom:4px;}
+.post h2 { font-size: 18px;margin:0 3% 12px;line-height:24px;border-left:5px solid #2d9ce1;padding-left:4px;color:#2d9ce1;}
+.post h3 { font-size: 16px;margin:0 3% 12px; line-height:24px;padding-left:10px;}
+.post h4 { font-size: 15px;margin:0 3% 12px;line-height:24px;;padding-left:10px;}
+.post h5 { font-size: 14px; font-weight: bold; margin:0 3% 12px;line-height:24px;padding-left:10px;}
+.post h6 { font-size: 13px; font-weight: bold;margin:0 3% 12px;line-height:24px;padding-left:10px;}
 .post p {margin:0 3% 12px;line-height:24px;}
 .post li{margin:0 3% 0 8%;}
-.post {font-size:16px;letter-spacing:0.8px;padding:10px 0;margin:15px 0;
+.post ul{margin:0 0 12px;}
+.post blockquote p{line-height:24px;margin:0 0 12px;}
+.post {font-size:16px;letter-spacing:0.8px;padding:10px 0;margin:15px 0 5px;
 border-bottom: 1px solid #ddd;
 width: 100%;background:#fff;
 }
@@ -133,35 +141,30 @@ opacity:0.88;transition: 1s;;
 .post img:hover{
 opacity:0.99;transition: 1s;}
 .entry_title {
-font-family: ubuntu,Microsoft Yahei;letter-spacing:0.5px;
+font-family: ubuntu,Microsoft Yahei;letter-spacing:0.5px;font-size:22px;font-weight:bold;
 text-align:center;
 }
 
-.entry_title a {color:#333;font-size:22px;font-weight:900;}
+.entry_title a {color:#444;}
 .container_16 { width:100%; margin:0;padding:0;float:left;overflow:hidden;}
 .entry_data {font-size:13px;font-family:ubuntu;text-align:center;color:#bbb;}
 .more {display:none;}
 #fanfou{margin:10px 0;}
-#fanfou li{background-color:white;color:#657686;border:1px solid #fff;line-height:1.7em;
-margin:4px 0px;font-size:14px;
-padding: 5px 8px;border-radius:5px;transition:1s;margin:3px 8px;}
+#fanfou li{background-color:white;color:#657686;border:1px solid #fff;line-height:1.7em;font-size:14px;
+padding: 5px 8px;border-radius:5px;transition:1s;margin:5px;}
 #fanfou a{font-family:ubuntu;}
 #fanfou li:hover{background-color:#2d9ce1;transition:1s;color:#fff;border:1px solid #2d9ce1;}
 #fanfou li:hover a{color:#dde;}
-#lab{text-align:center;background:#fff;margin:2%;border-radius:10px;padding:10px 0;}
+#lab{text-align:center;background:#fff;margin:2%;border-radius:5px;padding:10px 0;}
 #lab a{color:#657686;}
 #photo {font-size:14px;list-style:none;transition:2s;background-color:#fff;border:1px solid #dde;border-radius:5px;padding:8px 0px;margin:2px 0;min-width:47.2%;display: inline-block}
 #photo:hover{background-color:#2d9ce1;transition:2s;border:1px solid #2d9ce1;}
 #photo:hover a{color:#fff;}
-#links{text-align:center;background:#fff;margin:2%;border-radius:10px;padding:10px 0;}
+#links{text-align:center;background:#fff;margin:2%;border-radius:5px;padding:10px 0;}
 #links a{color:#657686;}
 #ulin {border:1px solid #dde;font-size:14px;list-style:none;transition:2s;background-color:#fff;border-radius:5px;padding:8px 0px;margin:2px 0;width:30.8%;display: inline-block}
 #ulin:hover{background-color:#2d9ce1;transition:2s;border:1px solid #2d9ce1;}
 #ulin:hover a{color:#fff;}
-#link {margin-left:10px;color:#aaa;font-size:14px;}
-#link:hover{color:#555;transition:1.5s;}
-#link a{border-radius:5px;font-size:14px;transition:1.5s;color:#aaa;}
-#link a:hover{color:#555;transition:1.5s;}
 #hr1{height:1px;border:none;border-top:5px solid #eee;}
 hr{height:1px;border:none;border-top:1px dashed #eee;width:100%;}
 embed{display:block;margin:12px 0;}
@@ -169,15 +172,21 @@ embed{display:block;margin:12px 0;}
 #footer a{color:#888;}
 #cdn{display:none;}
 .copyright, .weibo,.yuedu,.wechat,#tags{display: none;}
+.etc{min-height:48px;background:#fff;position:relative;margin:0;padding:0;width:100%;padding:10px 0 2px;}
+.etc img{width:36px;border-radius:50%;opacity:0.3;transition:1s;margin:0 10px;}
+.etc img:hover{opacity:0.7;transition:1s;}
+#next{width:20%;display:inline-block;}
+#prev{width:20%;display:inline-block;float:right;text-align:right;}
+.tags{width:59.5%;display:inline-block;text-align:center;position:absolute;color:#ccc;line-height:20px}
+.tags a{color:#ccc}
+.plyr,video{width:107%;margin-left:-3.2%;}
+.plyr video,.plyr audio{width:100%;position:relative;}
 
-.plyr{width:107%;margin-left:-3.2%;}
-.plyr video,.plyr audio{width:100%;}
-
-#whois{margin:20px 4px 0;font-size:14px;line-height:30px;background-color:#fff;border-radius:10px;}
+#whois{margin:20px 4px 0;font-size:14px;line-height:30px;background-color:#fff;border-radius:5px;}
 #whois img{height:12px;margin:0 10px;}
 #whois p{margin:0 10px;border-bottom:1px solid #eee;}
 #whois p:hover{color:#2d9ce1}
-#info {font-size:15px;font-weight:700;text-align:center;color:#fff;background-color:#2d9ce1;border-radius:9px 9px 0 0;margin-bottom:5px;}
+#info {font-size:15px;font-weight:700;text-align:center;color:#fff;background-color:#2d9ce1;border-radius:5px 5px 0 0;margin-bottom:5px;}
  #location{padding:3px 0;width:60%;margin:5px 0;}
  #contact {clear:both;margin:-115px 2% 10px;float:right;}
 #whois #contact img{height:100px;border-radius:50%;border:1px solid #fff;opacity:0.6;transition:2s;}
@@ -198,7 +207,6 @@ list-style: none;
 font-size: 14px;
 line-height: 20px;
 font-family:ubuntu;}
-.etc {margin:10px 3px 5px;line-height:2em;border-top:1px solid #eee;padding-top:5px }
 
 ol.page-navigator li {
 margin: 10px 5px;
@@ -219,12 +227,12 @@ color: #fff;
 
 .night {display:none;}
 
-.tags-list {padding:10px 0;background:#fff;margin:2%;border-radius:10px;width:96%;text-align:center;}
+.tags-list {padding:10px 0;background:#fff;margin:2%;border-radius:5px;width:96%;text-align:center;}
 .tags-list li{display:inline-block;margin:8px 0px;}
 .tags-list li a{padding:10px 15px;color:#fff;font-size:14px;border-radius:5px;}
 #lab h3,#links h3,.tags-list h3{margin:0px 0 8px;}
 
-#comments {background:#fff;border-radius:10px;padding-top:10px;width:96%;margin:2%;}
+#comments {background:#fff;border-radius:5px;padding-top:10px;width:96%;margin:2%;}
 #comments h3{text-align:center;margin:0px 0 8px;}
 #comments h4 {
 font-size: 14px;
@@ -295,7 +303,7 @@ font-style: normal;
 }
 
 .comment-body {
-overflow: hidden;margin:0;border-radius:10px 10px 0 10px;
+overflow: hidden;margin:0;border-radius:5px 10px 0 10px;
 }
 
 img.avatar {
@@ -362,13 +370,19 @@ ol#comment_list li .respond textarea {
 	_width: 400px;
 }
 
-.car-container {padding:10px 0}
+.car-container {padding:10px 0;margin:0 5%;}
 .car-container li{list-style:none;}
 .car-yearmonth{font-size:14px;font-weight:700;color:#444;}
-.car-list{border-left:5px solid #eee;padding:10px 0;margin:0 5%;}
+.car-list{border-left:5px solid #eee;padding:10px 0;}
 .car-monthlisting{font-size:14px;padding:2px 5px;border-radius:5px;background:#eee;margin:10px 0;transition:1s;}
 .car-monthlisting li{margin:5px 0;padding:2px 10px;border-radius:5px;background:#fff;transition:1s;}
 .car-monthlisting a{color:#2d9ce1;margin-left:5px;transition:1s;}
 .car-monthlisting:hover{background:#2d9ce1;transition:1s;}
 .car-monthlisting li:hover{background:#2d9ce1;color:#fff;transition:1s;}
 .car-monthlisting li:hover a{color:#eee;transition:1s;}
+
+.cat{display:inline-block;width:96%;padding:0 2%;margin:10px 0;}
+.jigu-body{display:inline-block;padding:10px;margin:4px;background:#FFF;border-radius:5px;width:42.9%;}
+.jigu-type-image img{width:100%;padding-top:10px;border-top:1px solid #eee;margin-top:5px;}
+.cat span{margin-left:10px;}
+.jigu-btn{width:100%;background:#fff;border:none;border-radius:5px;padding:5px 0%;margin:10px 0;}
