--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ h1, h2, h3, h4, h5, h6 { font-weight: normal; }
 }
 
 a {
-color: #999990;
+color: #ef7c7c;
 text-decoration: none;
 outline:none;
 }
@@ -42,23 +42,13 @@ color: #888;
 border-bottom: none;
 }
 a:active,a:visited,a:focus{text-decoration:none;outline:none;}
-pre, code, tt {
-	font: 12px 'andale mono', 'lucida console', monospace; line-height: 1.5;
-}
-code { margin-bottom: 20px; }
-pre, code {
-display: block;
-overflow-x: auto;
-background: #f4f4f4;
-padding: 5px 10px;
-border: 1px solid #eee;
-}
+pre, code{font-family:ubuntu,microsoft yahei;background:#cdd;padding:3px 5px;border-radius:5px;color:#888;}
 
 /* Remove possible quote marks (") from <q>, <blockquote>. */
 blockquote:before, blockquote:after, q:before, q:after { content: ""; }
 blockquote, q { quotes: "" ""; }
 
-blockquote  { margin:10px 0;padding:0 0.1em 0 0.6em; color: #777;;border-left:4px solid #ddd;}
+blockquote ,p blockquote { margin:10px 0;padding:0 0.1em 0 0.6em; color: #777;;border-left:4px solid #ddd;}
 ul { list-style-type: circle; }
 
 /* ------------------
@@ -108,32 +98,34 @@ ul#nav_menu li a:hover {transition:0.4s;background:#ef7c7c;color:#fff;}
  * --------------- */
 .container_16 { width:720px; }
 #content {font-size:13px;letter-spacing:0.3px;margin:0 auto;width:660px;}
-#content p { margin-bottom:8px;}
+#content p ,.post ul{ margin-bottom:8px;}
 .post {background:#fff;position:relative;width:660px;
-border-bottom: 1px solid #ddd;line-height:24px;border-radius:5px;padding:1px 30px;margin:10px 0 20px;
+border-bottom: 1px solid #ddd;line-height:24px;border-radius:5px;padding:10px 30px;margin:10px 0px;
 }
 .post img {
-margin:8px 0 8px -30px;width:720px;height:100%;animation:imgo 2s;text-align:center;overflow:hidden;
-opacity:0.88;
+margin:8px 0 8px -30px;width:720px;height:100%;animation:imgo 2s;text-align:center;overflow:hidden;transition:1s;
 }
 @keyframes imgo{
 0% {transform: translate3d(0, 10px,10px);opacity:0}
 100% {transform:none;opacity:1;}
 }
 .post img:hover{
-opacity:0.99;transition:1s;}
+filter: grayscale(100%); 
+filter: gray;transition:1s;}
 .entry_title {
-font-family:ubuntu,Microsoft Yahei;margin:10px 0 0;
+font-family:ubuntu,Microsoft Yahei;margin:10px 0 0;font-size:20px;font-weight:normal;
 text-align:center;
 }
 
-.entry_title a {color:#444;font-size:20px;font-weight:500;
+.entry_title a {color:#444;
 }
 
-.post h3 { font-size: 16px; }
-.post h4 { font-size: 15px; }
-.post h5 { font-size: 14px; font-weight: bold; }
-.post h6 { font-size: 13px; font-weight: bold; }
+.post h1 { font-size: 20px;line-height:1em;font-weight: bold;border-bottom:1px solid #ddd;padding-bottom:6px;margin:10px 0;}
+.post h2 { font-size: 18px;line-height:1em;border-left:5px solid #ef7c7c;color:#ef7c7c;font-weight:bold;padding:0px 0 1px 5px;margin:10px 0;}
+.post h3 { font-size: 16px;line-height:1em;margin:10px;}
+.post h4 { font-size: 15px;line-height:1em;margin:10px;}
+.post h5 { font-size: 14px; font-weight: bold;line-height:1em;margin:10px;}
+.post h6 { font-size: 13px; font-weight: bold;line-height:1em;margin:10px;}
 
 .entry_data {
 color: #999;
@@ -149,34 +141,33 @@ padding: 8px 20px;border-radius:5px;transition:1s;}
 .fanfou_statuses li:hover{background-color:#ef7c7c;transition:1s;color:#fff;}
 .fanfou_statuses li a{color:#ef7c7c;transition:1s;}
 .fanfou_statuses li:hover a{color:#ccc;transition:1s;}
-#lab{background:#fff;padding:20px 30px;border-radius:10px;width:660px;}
+#lab{background:#fff;padding:20px 30px;border-radius:5px;width:660px;}
 #lab a{color:#444;}
 #lab h3 ,#links h3{text-align:center;}
 #photo {text-align:center;font-size:14px;list-style:none;transition:1s;background-color:#fff;border-radius:5px;border:1px dashed #ccc;width:18.7%;padding:10px 0px;margin:2px;display: inline-block}
 #photo:hover{background-color:#ef7c7c;transition:1s;border:1px solid #fff;}
 #photo:hover a{color:#fff;transition:1s;}
-#links{background:#fff;padding:20px 30px;border-radius:10px;width:660px;}
+#links{background:#fff;padding:20px 30px;border-radius:5px;width:660px;}
 #links a{color:#444;}
 #ulin {text-align:center;border:1px dashed #ccc;font-size:14px;list-style:none;transition:1s;background-color:#fff;border-radius:5px;padding:10px 0px;margin:2px 2px;width:15.3%;display: inline-block}
 #ulin:hover{background-color:#ef7c7c;transition:1s;border:1px solid #fff;}
 #ulin:hover a{color:#fff;transition:1s;}
-#tags {margin:0 10px;color:#aaa;font-size:12px;padding:5px 0;}
-#tags:hover{color:#555;transition:1.5s;}
-#tags a{border-radius:5px;font-size:12px;transition:1.5s;color:#aaa;}
-#tags a:hover{color:#555;transition:1.5s;}
-#link {margin:0 10px;color:#aaa;font-size:12px;padding:5px 0;}
-#link:hover{color:#555;transition:1.5s;}
-#link a{border-radius:5px;font-size:12px;transition:1.5s;color:#aaa;}
-#link a:hover{color:#555;transition:1.5s;}
 hr{border-top:1px dashed #ddd;width:720px;margin-left:-30px;}
-.etc{margin:20px -20px 8px;font-family:microsoft yahei;border-top:1px solid #eee;padding:8px 0 0px;}
 .night{position:fixed;right:10px;bottom:10%;background:rgba(255, 255, 255, 0.3);padding:10px;border-radius:8px;animation:righter 4s;z-index:10;}
 .night img{width:30px;border-radius:50%;display:block;margin:5px 0;}
 .night img:hover{animation:clock 6s infinite;}
+.etc{min-height:42px;width:660px;background:#fff;padding:10px 30px 4px;border-radius:5px;position:relative;margin-bottom:30px;}
+.etc img{width:36px;border-radius:50%;opacity:0.8;transition:1s;}
+.etc img:hover{opacity:1;transition:1s;}
+#next{width:30%;display:inline-block;}
+#prev{width:30%;display:inline-block;float:right;text-align:right;}
+.tags{width:39.5%;display:inline-block;text-align:center;position:absolute;color:#ef7c7c;font-size:14px;line-height:13px}
+.tags a{color:#ef7c7c;transition:1s;}
+.tags a:hover{color:#ef7c7c;transition:1s;}
 
 
 .plyr{width:720px;margin-left:-30px;text-align:center;}
-.plyr video,.plyr audio {width:720px;}
+.plyr video,.plyr audio {width:100%;position:relative;}
 
 @keyframes righter {
 0% {transform: translate3d(20px,0,0);opacity:0}
@@ -188,19 +179,21 @@ hr{border-top:1px dashed #ddd;width:720px;margin-left:-30px;}
 100%{transform:rotate(360deg)}
 }
 
-#whois{margin:20px 0 0;font-size:14px;line-height:30px;background-color:#fff;border-radius:10px;}
+#whois{margin:20px 0 0;font-size:14px;line-height:30px;background-color:#fff;border-radius:5px;}
 #whois img{height:12px;margin:0 10px;}
 #whois p{margin:0 10px;border-bottom:1px solid #eee;}
-#whois p:hover{color:#ef7c7c;}
-#info {font-size:15px;font-weight:700;text-align:center;color:#fff;background-color:#ef7c7c;border-radius:9px 9px 0 0;margin-bottom:5px;}
+#info {font-size:15px;font-weight:700;text-align:center;color:#fff;background-color:#ef7c7c;border-radius:5px 5px 0 0;margin-bottom:5px;}
  #location{padding:3px 0;width:75%;margin:5px 0;}
  #contact {clear:both;margin:-115px 10px 10px;float:right;}
 #whois #contact img{height:100px;border-radius:50%;border:1px solid #fff;opacity:0.6;transition:2s;}
 #whois #contact img:hover{opacity:1;transition:2s;}
  #detail{padding:3px 0;width:100%;margin:5px 0;}
+ #detail:hover,#location:hover{color:#ef7c7c;}
+ #detail img,#location img{filter: grayscale(100%);filter: gray;}
+  #detail:hover img,#location:hover img{filter:none;}
 .lost{width:100%;text-align:center;}
 .lost img{border-radius:50%;border:4px solid #ddd;width:200px;}
-.tags-list {background:#fff;padding:18px 30px;border-radius:10px;width:660px;text-align:center;margin:18px 0;}
+.tags-list {background:#fff;padding:18px 30px;border-radius:5px;width:660px;text-align:center;margin:18px 0;}
 .tags-list li{display:inline-block;margin:10px 1px;}
 .tags-list li a{padding:10px 15px;color:#fff;font-size:14px;border-radius:5px;}
 #lab hr,#links hr,.tags-list hr,#comments hr{height:10px;margin:0px 0 20px;width:660px;
@@ -238,7 +231,7 @@ color: #fff;
  * comment list
  * --------------- */
 #comments {
-margin-top: 20px;background:#fff;border-radius:10px;width:660px;padding:20px 30px;
+margin-top: 20px;background:#fff;border-radius:5px;width:660px;padding:20px 30px;
 }
 #comments h3{text-align:center;padding:5px 0;}
 #comments h4 {
@@ -310,7 +303,7 @@ font-style: normal;
 }
 
 .comment-body {
-overflow: hidden;margin:0;border-radius:10px 10px 0 10px;
+overflow: hidden;margin:0;border-radius:5px 10px 0 10px;
 }
 
 img.avatar {
@@ -404,3 +397,12 @@ border-bottom: none;color:#888;
 .car-monthlisting a{color:#ef7c7c;margin-left:5px;transition:1s;}
 .car-monthlisting li:hover{background:#ef7c7c;color:#fff;transition:1s;}
 .car-monthlisting li:hover a{color:#eee;transition:1s;}
+
+.cat{width:1000px;margin-left:-130px;color:#444;}
+.jigu-body{display:inline-block;padding:10px;margin:4.01px;background:#FFF;border-radius:5px;width:22.2%;transition:1s;}
+.jigu-body:hover{background:#ef7c7c;color:#ddd;transition:1s;}
+.jigu-body:hover a{color:#fff;transition:1s;}
+.jigu-body:hover img{filter: grayscale(100%); filter: gray;transition:1s;}
+.jigu-type-image img{width:100%;margin-top:5px;border-radius:5px;transition:1s;}
+.cat span{margin-left:10px;}
+.jigu-btn{width:100%;background:#fff;border:none;border-radius:5px;padding:5px 0%;margin:10px 0;}
